Alteração Index texto e View Loja

--- a/scss/custom/_header.scss
+++ b/scss/custom/_header.scss
@@ -1,6 +1,10 @@
 
-.middle-content-section h1 {
-    font-family: 'Fredericka the Great', cursive;
+.middle-content-section{    
+    text-align: center;
+    color: #f5928b;
+    p{
+        font-weight: 600;
+    }
 }
 
 .top-bar,
