--- a/web/views/loja.html
+++ b/web/views/loja.html
@@ -12,59 +12,57 @@
     <link rel="stylesheet" href="/css/app.min.css">
     <link rel="stylesheet" href="/css/app-effects.css" async>
     <link class="fonte" href="https://fonts.googleapis.com/css?family=Sura|Fredericka the Great" rel="stylesheet" async>
+    
 </head>
 
 <body>
-    <div class="hero-full-screen">
-        <div class="top-content-section">
-            <div class="top-bar">
-                <div class="top-bar-left">
-                    <a href="\index.html" rel="home">
-                        
-                        <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
-                    </a> 
-                </div>
-                
-                <div class="top-bar-right">
-                    <ul class="menu float-left">
+    <!-- HEADER -->
+    <header id="header" class="topbar-sticky-shrink-header">
+        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like"
+        data-size="small" data-show-faces="false" data-share="false"></div>
+    </header>
+    
+    <!-- MENU -->
+    <div data-sticky-container>
+        <div data-sticky data-margin-top='0' data-top-anchor="header:bottom" data-btm-anchor="content:bottom">
+            <div class="top-bar topbar-sticky-shrink">
+                <div class="top-bar-center">
+                    <ul class="menu">
                         <li>
-                            <a href="\views\quem-somos.html">Quem somos</a>
+                            <a href="views/quem-somos.html">Quem somos</a>
                         </li>
                         <li>
-                            <a href="\views\dia-a-dia.html">Dia-a-dia</a>
+                            <a href="#">Seja um doador</a>
                         </li>
                         <li>
-                            <a href="\views\seja-doador.html">Seja um doador</a>
+                            <a href="#">Eventos</a>
                         </li>
                         <li>
-                            <a href="\views\loja.html">Loja</a>
+                            <a href="views/loja.html">Loja</a>
                         </li>
                         <li>
-                            <a href="\views\contato.html"> Contato</a>
+                            <a href="views/contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        
-        <div class="middle-content-section">
-            <h1>Loja da Novo Rumo Atibaia</h1>
-            <p>Seja muito bem-vindo a nossa loja!</p>
-        </div>
-        
-        <div class="bottom-content-section" data-magellan data-threshold="1">
-            <a href="#main-content-section">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"
-                    />
-                </svg>
-            </a>
-        </div>
-    </div>  
-    
-    <div class="grid-x grid-padding-x align-center">
-        <h2 class="topicos">Produtos</h2>
     </div>
+    
+    
+    <div class="middle-content-section">
+        <h1>Loja da Novo Rumo Atibaia</h1>
+        <p>Seja muito bem-vindo a nossa loja!</p>
+    </div>
+    
+    <!-- BODY -->
+    
+    <div class="blue-content text-center">
+        <div class="grid-container">
+            <h2>Produtos</h2>
+        </div>
+    </div>
+    
     <div class="grid-x grid-padding-x text-center ">
         <div class="medium-4 large-4 small-12 cell">
             <figure>
