--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -4,6 +4,11 @@
     height: 45px;
     width: 100%;
     border-radius: 0 0 10px 10px;
+    h3{
+
+        font-size: 20px;
+    
+    }
 }
 
 .product-grid {
@@ -20,6 +25,7 @@ h6 {
     text-transform: uppercase;
     font-weight: 900;
 }
+
 
 h2 {
     line-height: 0.8em;
@@ -46,6 +52,9 @@ h2 {
     h4 {
         padding-top: 15px;
         line-height: 31px;
+    }
+    p{
+        color: $primary-color;
     }
 }
 
