--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5103,8 +5103,11 @@ html.is-reveal-open body {
 .button {
   text-transform: uppercase; }
 
-.middle-content-section h1 {
-  font-family: 'Fredericka the Great', cursive; }
+.middle-content-section {
+  text-align: center;
+  color: #f5928b; }
+  .middle-content-section p {
+    font-weight: 600; }
 
 .top-bar,
 .top-bar ul {
@@ -5261,6 +5264,8 @@ div.fb-like.fb_iframe_widget {
   height: 45px;
   width: 100%;
   border-radius: 0 0 10px 10px; }
+  .prod-name h3 {
+    font-size: 20px; }
 
 .product-grid {
   border-radius: 10px 10px 0 0;
@@ -5297,6 +5302,8 @@ h2 {
   .white-content h4 {
     padding-top: 15px;
     line-height: 31px; }
+  .white-content p {
+    color: #00b9c1; }
 
 .pink-content {
   background: url(/images/sparkles.gif), url(/images/bg-top.png);
