--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -140,8 +140,8 @@ $header-margin-bottom: 0.5rem;
 $header-styles: (
   small: (
     'h1': ('font-size': 24),
-    'h2': ('font-size': 20),
-    'h3': ('font-size': 19),
+    'h2': ('font-size': 3.75em),
+    'h3': ('font-size': 2.75em),
     'h4': ('font-size': 18),
     'h5': ('font-size': 17),
     'h6': ('font-size': 16),
