--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -2,6 +2,11 @@ $topbar-sticky-shrink-padding: 0rem;
 $topbar-sticky-shrink-bg: #fff;
 $topbar-sticky-stuck-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
 $topbar-sticky-font-size: 0.8em;
+
+.top-bar, .top-bar ul {
+    background-color: $topbar-sticky-shrink-bg;
+}
+
 .topbar-sticky-shrink {
     padding: $topbar-sticky-shrink-padding;
     transition: padding 0.25s ease;
