--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -1,9 +1,17 @@
+
+.middle-content-section{
+    color: $alert-color;
+    text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
 .prod-name {
     background-color: rgba(104, 255, 247, 0.158);
     border-bottom: 1px solid #eeeeee;
     height: 45px;
     width: 100%;
     border-radius: 0 0 10px 10px;
+    
     h3{
 
         font-size: 20px;
@@ -14,6 +22,8 @@
 .product-grid {
     border-radius: 10px 10px 0 0;
     height: 20rem;
+    margin-top: 5rem;
+    
 }
 
 h1,
