--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -1,3 +1,13 @@
+.mapa{
+    margin-bottom: 5rem;
+    margin-left: 5rem;
+}
+
+.texto-quem-somos{
+    margin-top: 6rem;
+    font-weight: 550;
+    text-transform: initial;
+}
 
 .middle-content-section{
     color: $alert-color;
