--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -2,8 +2,22 @@ $topbar-sticky-shrink-padding: 0rem;
 $topbar-sticky-shrink-bg: #fff;
 $topbar-sticky-stuck-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
 $topbar-sticky-font-size: 0.8em;
+nav {
+    width: 100%;
+    position: fixed;
+    left: 0px;
+    top: -4.25em;
+    height: 4.25em;
+    background-color: #fff;
+    z-index: 99;
+    -webkit-box-shadow: $topbar-sticky-stuck-shadow;
+    -moz-box-shadow: $topbar-sticky-stuck-shadow;
+    box-shadow: $topbar-sticky-stuck-shadow;
+    overflow: hidden
+}
 
-.top-bar, .top-bar ul {
+.top-bar,
+.top-bar ul {
     background-color: $topbar-sticky-shrink-bg;
 }
 
@@ -22,17 +36,6 @@ $topbar-sticky-font-size: 0.8em;
         line-height: 4.25em;
         padding: .7rem 2rem
     }
-}
-
-.is-stuck .topbar-sticky-shrink {
-    transition: padding 0.25s ease;
-    -webkit-box-shadow: $topbar-sticky-stuck-shadow;
-    -moz-box-shadow: $topbar-sticky-stuck-shadow;
-    box-shadow: $topbar-sticky-stuck-shadow;
-}
-
-[data-sticky] {
-    width: 100%;
 }
 
 .topbar-sticky-shrink-header {
