--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5162,7 +5162,21 @@ html.is-reveal-open body {
   .social-icon img {
     -webkit-transform: rotate(-45deg); }
 
-.top-bar, .top-bar ul {
+nav {
+  width: 100%;
+  position: fixed;
+  left: 0px;
+  top: -4.25em;
+  height: 4.25em;
+  background-color: #fff;
+  z-index: 99;
+  -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
+  overflow: hidden; }
+
+.top-bar,
+.top-bar ul {
   background-color: #fff; }
 
 .topbar-sticky-shrink {
@@ -5178,15 +5192,6 @@ html.is-reveal-open body {
     text-align: center;
     line-height: 4.25em;
     padding: .7rem 2rem; }
-
-.is-stuck .topbar-sticky-shrink {
-  transition: padding 0.25s ease;
-  -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2); }
-
-[data-sticky] {
-  width: 100%; }
 
 .topbar-sticky-shrink-header {
   padding: 17rem 0;
