--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -16,6 +16,13 @@ nav {
     overflow: hidden
 }
 
+#header {
+    height: 100%;
+    background-color: #000;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000
+}
+
 .top-bar,
 .top-bar ul {
     background-color: $topbar-sticky-shrink-bg;
@@ -39,7 +46,7 @@ nav {
 }
 
 .topbar-sticky-shrink-header {
-    padding: 17rem 0;
+    padding: 20rem 0;
     background-size: cover;
 }
 
