--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -1,20 +1,24 @@
-.middle-content-section{
+html,
+body {
+    height: 100%;
+    width: 100%
+}
+
+.middle-content-section {
     color: $alert-color;
     text-align: center;
     margin-top: 5rem;
     margin-bottom: 5rem;
 }
+
 .prod-name {
     background-color: rgba(104, 255, 247, 0.158);
     border-bottom: 1px solid #eeeeee;
     height: 45px;
     width: 100%;
     border-radius: 0 0 10px 10px;
-    
-    h3{
-
+    h3 {
         font-size: 20px;
-    
     }
 }
 
@@ -22,7 +26,6 @@
     border-radius: 10px 10px 0 0;
     height: 20rem;
     margin-top: 5rem;
-    
 }
 
 h1,
@@ -34,7 +37,6 @@ h6 {
     text-transform: uppercase;
     font-weight: 900;
 }
-
 
 h2 {
     line-height: 0.8em;
@@ -62,7 +64,7 @@ h2 {
         padding-top: 15px;
         line-height: 31px;
     }
-    p{
+    p {
         color: $primary-color;
     }
 }
@@ -93,6 +95,6 @@ h2 {
 
 @include breakpoint(small only) {
     .quote {
-        top:0;   
+        top: 0;
     }
 }
