--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5181,6 +5181,16 @@ nav {
   -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000; }
 
+.spirit {
+  background: url("http://via.placeholder.com/1265x711") center center no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  overflow: hidden; }
+
 .top-bar,
 .top-bar ul {
   background-color: #fff; }
@@ -5208,6 +5218,11 @@ div.fb-like.fb_iframe_widget {
   top: 20px;
   right: 20px;
   z-index: 999; }
+
+html,
+body {
+  height: 100%;
+  width: 100%; }
 
 .middle-content-section {
   color: #cc4b37;
