--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5170,10 +5170,23 @@ nav {
   height: 4.25em;
   background-color: #fff;
   z-index: 99;
+  text-align: center;
   -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
   overflow: hidden; }
+  nav h4 {
+    font-size: 0.8em;
+    margin: 0px;
+    padding: 0px;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    -webkit-margin-before: 1.33em;
+    -webkit-margin-after: 1.33em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    font-weight: bold; }
 
 #header {
   height: 100%;
@@ -5229,20 +5242,6 @@ body {
   text-align: center;
   margin-top: 5rem;
   margin-bottom: 5rem; }
-
-.prod-name {
-  background-color: rgba(104, 255, 247, 0.158);
-  border-bottom: 1px solid #eeeeee;
-  height: 45px;
-  width: 100%;
-  border-radius: 0 0 10px 10px; }
-  .prod-name h3 {
-    font-size: 20px; }
-
-.product-grid {
-  border-radius: 10px 10px 0 0;
-  height: 20rem;
-  margin-top: 5rem; }
 
 h1,
 h2,
