--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -81,3 +81,10 @@ div.fb-like.fb_iframe_widget {
     right: 20px;
     z-index: 999
 }
+
+.scrollable-nav {
+    position: fixed;
+    right: 0;
+    top: 0;
+    left: 0;
+}
