--- a/web/css/app.css
+++ b/web/css/app.css
@@ -4465,8 +4465,8 @@ a.button:hover, a.button:focus {
     display: block;
     width: 100%;
     height: 2px;
-    background: #fefefe;
-    box-shadow: 0 7px 0 #fefefe, 0 14px 0 #fefefe;
+    background: #00b9c1;
+    box-shadow: 0 7px 0 #00b9c1, 0 14px 0 #00b9c1;
     content: ''; }
   .menu-icon:hover::after {
     background: #cacaca;
@@ -4910,8 +4910,8 @@ html.is-reveal-open body {
 
 .title-bar {
   padding: 0.5rem;
-  background: #0a0a0a;
-  color: #fefefe;
+  background: #fefefe;
+  color: #00b9c1;
   display: flex;
   justify-content: flex-start;
   align-items: center; }
@@ -5231,6 +5231,12 @@ div.fb-like.fb_iframe_widget {
   top: 20px;
   right: 20px;
   z-index: 999; }
+
+.scrollable-nav {
+  position: fixed;
+  right: 0;
+  top: 0;
+  left: 0; }
 
 html,
 body {
