--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5232,11 +5232,17 @@ div.fb-like.fb_iframe_widget {
   right: 20px;
   z-index: 999; }
 
-.scrollable-nav {
+.scrollhide-nav {
   position: fixed;
   right: 0;
   top: 0;
-  left: 0; }
+  left: 0;
+  transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+  -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2); }
+  .scrollhide-nav.hidden {
+    transform: translateY(-100%); }
 
 html,
 body {
