Ajuste no menu responsivo

--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -92,6 +92,7 @@ $scrollhide-nav-transition-speed: 0.5s;
     -webkit-box-shadow: $topbar-sticky-stuck-shadow;
     -moz-box-shadow: $topbar-sticky-stuck-shadow;
     box-shadow: $topbar-sticky-stuck-shadow;
+    z-index: 1;
     &.hidden {
         transform: translateY(-100%);
     }
