Atualozação de QUEM SOMOS. Inclusão do efeito  MOTION para fazer a animação de FADE e inclusão do estilo da animação na INDEX

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -41,6 +41,8 @@
 @include foundation-top-bar;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
+@include motion-ui-transitions;
+@include motion-ui-animations;
 
 
 /*
