--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -81,3 +81,37 @@ h2 {
         top: 0;
     }
 }
+
+.img-header{
+    width: 100%;
+    height: 100%;
+}
+
+.grid-container{
+    margin: 0 auto;
+    h2{
+        padding-bottom: 35px;
+        
+    }
+    
+}
+.size{
+    max-width: 1024px;
+}
+
+.grid__item{
+    display: inline-block;
+    vertical-align: top;
+    width: 50%;
+    position: relative;
+    box-sizing: border-box;
+}
+
+#open-text{
+    color: $primary-color;
+    text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    width: 100%;
+    
+}
