--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -38,7 +38,7 @@ nav {
 }
 
 .spirit {
-    background: url('http://via.placeholder.com/1265x711') center center no-repeat;
+    background: url('http://via.placeholder.com/1265x711/FCF7EF') center center no-repeat;
     background-attachment: fixed;
     background-size: cover;
     height: 100%;
