--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -65,6 +65,10 @@ h2 {
     }
 }
 
+.stripe {
+    padding: 0px 0px 90px 0;
+}
+
 .pink-content {
     background-image: url(/images/sparkles.gif);
 }
