Ajustes nos design

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5195,7 +5195,7 @@ nav {
   -webkit-perspective: 1000; }
 
 .spirit {
-  background: url("http://via.placeholder.com/1265x711/FCF7EF") center center no-repeat;
+  background: url("/images/Banner_v1.png") center center no-repeat;
   background-attachment: fixed;
   background-size: cover;
   height: 100%;
